Try removing usage of Pair